<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/header"
            android:text="@string/form"
            android:gravity="center"
            android:textSize="25sp"
            android:background="#6A31CF"
            android:textColor="@color/white"
            android:padding="10sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dt_mhs"
            android:text="@string/data_mhs"
            android:layout_below="@+id/header"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dt_mhs"
            android:hint="@string/ip_nama"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ip_nama"
            android:autofillHints="name"
            android:inputType="textPersonName"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ip_nama"
            android:hint="@string/ip_nim"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ip_nim"
            android:autofillHints="nim"
            android:inputType="number"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ip_nim"
            android:hint="@string/ip_jurusan"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:id="@+id/ip_jurusan"
            android:autofillHints="nim"
            android:inputType="text"
            android:layout_marginTop="10sp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nilai_mhs"
            android:text="@string/nilai_mhs"
            android:layout_below="@+id/ip_jurusan"
            android:textSize="23sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/absen"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nilai_mhs"
            android:id="@+id/nilai_absen"
            android:layout_marginTop="10sp"
            android:autofillHints="absen"
            android:inputType="number"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/tugas"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nilai_absen"
            android:id="@+id/nilai_tugas"
            android:layout_marginTop="10sp"
            android:autofillHints="tugas"
            android:inputType="number"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/mid"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nilai_tugas"
            android:id="@+id/nilai_mid"
            android:layout_marginTop="10sp"
            android:autofillHints="mid"
            android:inputType="number"
            />
        <EditText
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:hint="@string/akhir"
            android:textSize="16sp"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/nilai_mid"
            android:id="@+id/nilai_final"
            android:layout_marginTop="10sp"
            android:autofillHints="final"
            android:inputType="number"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/proses"
            android:text="@string/proses"
            android:layout_below="@+id/nilai_final"
            android:layout_centerHorizontal="true"
            android:background="@color/white"
            android:layout_marginTop="6sp"
            />
        <TextView
            android:id="@+id/hasil_text_view"
            android:layout_width="280sp"
            android:layout_height="wrap_content"
            android:layout_below="@id/proses"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:textSize="18sp" />


    </RelativeLayout>
</ScrollView>