<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/text1"
        android:background="#8356D3"
        android:textColor="@color/white"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="6sp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username_label"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_below="@+id/text1"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password_label"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_below="@+id/username"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login1"
            android:text="@string/login_label"
            android:layout_marginTop="10sp"
            android:padding="5dp"
            android:textColor="@color/white"
            android:backgroundTint="#8356D3"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/regis1"
            android:text="@string/register_label"
            android:textColor="@color/white"
            android:padding="5dp"
            android:layout_marginStart="50sp"
            android:layout_marginTop="10sp"
            android:backgroundTint="#8356D3"
            />
    </LinearLayout>

</RelativeLayout>